done some of the css, including navbar and fonts

--- a/gama.html
+++ b/gama.html
@@ -7,15 +7,21 @@
     <meta name="author" content="Leonardo Gama">
     <meta name="description" content="The main website for all things pertaining to exactly one person (Leonardo Gama)">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./gama.css">
-    <script src="./gama.js"></script>
+    <link rel="stylesheet" href="./Styles/gama.css">
+    <script src="./Scripts/gama.js"></script>
 </head>
 <body>
     <!-- NAV BAR -->
-    <nav id="navBar">
-        <ul>
-            <!-- TODO: This will be links to all pages -->
-        </ul>
+    <nav id="navBar" class="navbar navbar-expand-lg navbar-light sticky-top row">
+        <div id="leftNav" class="col collapse navbar-collapse">
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#codeProjects">Code Projects</a>
+            <a class="nav-link" href="#commissions">Wood Commissions</a>
+            <a class="nav-link" href="#woodProjects">Wood Projects</a>
+        </div>
+        <div id="rightNav" class="col collapse navbar-collapse">
+            <a class="navbar-brand" href="#about">Leonardo Gama</a>
+        </div>
     </nav>
     <div id="mainPage">
         <!-- ABOUT ME -->
@@ -25,7 +31,7 @@
                 <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
                 <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
                 <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
-                <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./GamaLeonardo_Resume.pdf" target="blank">Resume</a>
+                <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
             </div>
         </section>
         <hr>
@@ -62,17 +68,17 @@
                 <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
                 <ul>
                     <li><p>
-                        I charge a flat rate of $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
+                        I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
                     </p></li>
                     <li><p>
-                        On top of the flat rate, I charge an additional $5 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
+                        On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
                     </p></li>
                     <li><p>
-                        I will request a downpayment (typically $10 unless the cost is notably high) before I begin your commission to ensure I still get paid if you decide not to purchase the piece upon completion.
+                        I will request a downpayment (typically 25% of the cost) before I begin your commission.
                     </p></li>
                     <li><p>
-                        Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) may be subject to additional fees. This includes
-                        the request of a design being burnt into a tree slice, given that the requested slice is notably large.
+                        Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) are subject to additional fees. This may include
+                        the request of a design being burnt into a tree slice.
                     </p></li>
                     <li><p>
                         When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
