--- a/gama.html
+++ b/gama.html
@@ -13,99 +13,115 @@
 <body>
     <!-- NAV BAR -->
     <nav id="navBar" class="navbar navbar-expand-lg navbar-light sticky-top row">
-        <div id="leftNav" class="col collapse navbar-collapse">
+        <div id="topNav" class="col collapse navbar-collapse">
+            <a class="nav-link" href="#about">Leonardo Gama</a>
+        </div>
+        <hr>
+        <div id="bottomNav" class="col collapse navbar-collapse">
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#codeProjects">Code Projects</a>
             <a class="nav-link" href="#commissions">Wood Commissions</a>
             <a class="nav-link" href="#woodProjects">Wood Projects</a>
         </div>
-        <div id="rightNav" class="col collapse navbar-collapse">
-            <a class="navbar-brand" href="#about">Leonardo Gama</a>
-        </div>
     </nav>
-    <div id="mainPage">
+    <!-- END NAV -->
+    <div id="mainPage" class="container-fluid">
         <!-- ABOUT ME -->
-        <section id="about">
-            <h1>Leonardo Gama</h1>
-            <div>
-                <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
-                <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
-                <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
-                <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
+        <section id="about" class="row">
+            <div class="span6" style="float: none; margin: 0 auto;">
+                <h1>Leonardo Gama</h1>
+                <p style="text-align: center; font-size: 12px;"><i>Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</i></p>
+                <br>
+                <div>
+                    <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
+                    <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
+                    <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
+                    <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
+                </div>
             </div>
         </section>
+        <!-- END ABOUT ME -->
         <hr>
         <!-- CODE PROJECTS -->
-        <section id="codeProjects">
-            <h2>Code Projects</h2>
-            <div>
-                <ul>
-                    <li>
-                        <h3>L30-Series Discord Bots</h3>
-                        <p>
-                            These Discord bots each do somewhat similar tasks, with some differences. The first model, <a href="https://github.com/Leo10Gama/L30Gamma" target="blank">L30-Gamma</a>, uses JavaScript, while the
-                            second model, <a href="https://github.com/Leo10Gama/L30Pi" target="blank">L30-Pi</a>, uses Python. Each makes use of similar API provided by Discord to interact with the server interface, as well
-                            as other API such as PokeAPI or BeautifulSoup to perform supplementary tasks.
-                        </p>
-                        <p>
-                            Each bot does its own thing, but their primary purpose is to show pictures of cats. Images are shown either at random, or a random image of a specific cat can be seen if that cat's name
-                            is entered following the command. In addition, the L30-Pi model is capable of interacting with websites like <a href="https://en.numista.com/" target="blank">Numista</a>, 
-                            <a href="https://www.ninsheetmusic.org/" target="blank">NinSheetMusic</a>, and <a href="https://downloads.khinsider.com/" target="blank">KHInsider</a> to get more information oncoins, 
-                            sheet music, or video game soundtracks respectively.
-                        </p>
-                    </li>
-                </ul>
+        <section id="codeProjects" class="row">
+            <div class="span6" style="float: none; margin: 0 auto;">
+                <h2>Code Projects</h2>
+                <div>
+                    <ul>
+                        <li>
+                            <h3>L30-Series Discord Bots</h3>
+                            <p>
+                                These Discord bots each do somewhat similar tasks, with some differences. The first model, <a href="https://github.com/Leo10Gama/L30Gamma" target="blank">L30-Gamma</a>, uses JavaScript, while the
+                                second model, <a href="https://github.com/Leo10Gama/L30Pi" target="blank">L30-Pi</a>, uses Python. Each makes use of similar API provided by Discord to interact with the server interface, as well
+                                as other API such as PokeAPI or BeautifulSoup to perform supplementary tasks.
+                            </p>
+                            <p>
+                                Each bot does its own thing, but their primary purpose is to show pictures of cats. Images are shown either at random, or a random image of a specific cat can be seen if that cat's name
+                                is entered following the command. In addition, the L30-Pi model is capable of interacting with websites like <a href="https://en.numista.com/" target="blank">Numista</a>, 
+                                <a href="https://www.ninsheetmusic.org/" target="blank">NinSheetMusic</a>, and <a href="https://downloads.khinsider.com/" target="blank">KHInsider</a> to get more information oncoins, 
+                                sheet music, or video game soundtracks respectively.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
+        <!-- END CODE PROJECTS -->
         <hr>
         <!-- COMMISSIONS -->
-        <section id="commissions">
-            <div id="commissionsHeader">
-                <h2>Pyrography Commissions</h2>
-                <p><i>Currently <b>OPEN</b></i></p>
-            </div>
-            <div>
-                <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
-                <ul>
-                    <li><p>
-                        I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
-                    </p></li>
-                    <li><p>
-                        On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
-                    </p></li>
-                    <li><p>
-                        I will request a downpayment (typically 25% of the cost) before I begin your commission.
-                    </p></li>
-                    <li><p>
-                        Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) are subject to additional fees. This may include
-                        the request of a design being burnt into a tree slice.
-                    </p></li>
-                    <li><p>
-                        When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
-                        nearby enough to me, I may also hand-deliver you the commission to reduce delivery time, though this would be at your own discretion.
-                    </p></li>
-                    <li><p>
-                        Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
-                    </p></li>
-                    <li><p>
-                        I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory.
-                    </p></li>
-                </ul>
-                <p>To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
-                    From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks latest to be
-                    completed, burned, and sealed. 
-                </p>
+        <section id="commissions" class="row">
+            <div class="span6" style="float: none; margin: 0 auto;">
+                <div id="commissionsHeader">
+                    <h2>Pyrography Commissions</h2>
+                    <p><i>Currently <b>OPEN</b></i></p>
+                </div>
+                <div>
+                    <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
+                    <ul>
+                        <li><p>
+                            I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
+                        </p></li>
+                        <li><p>
+                            On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
+                        </p></li>
+                        <li><p>
+                            I will request a downpayment (typically 25% of the cost) before I begin your commission.
+                        </p></li>
+                        <li><p>
+                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) are subject to additional fees. This may include
+                            the request of a design being burnt into a tree slice.
+                        </p></li>
+                        <li><p>
+                            When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
+                            nearby enough to me, I may also hand-deliver you the commission to reduce delivery time, though this would be at your own discretion.
+                        </p></li>
+                        <li><p>
+                            Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
+                        </p></li>
+                        <li><p>
+                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory.
+                        </p></li>
+                    </ul>
+                    <p>To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
+                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks latest to be
+                        completed, burned, and sealed. 
+                    </p>
+                </div>
             </div>
         </section>
+        <!-- END COMMISSIONS -->
         <hr>
         <!-- WOOD PROJECTS -->
-        <section id="woodProjects">
-            <h2>Wood Projects</h2>
-            <div>
-                <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
-                <!-- TODO: Implement gallery of woodburn photos -->
+        <section id="woodProjects" class="row">
+            <div class="span6" style="float: none; margin: 0 auto;">
+                <h2>Wood Projects</h2>
+                <div>
+                    <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
+                    <!-- TODO: Implement gallery of woodburn photos -->
+                </div>
             </div>
         </section>
+        <!-- END WOOD PROJECTS -->
     </div>
 </body>
 </html>
