--- a/gama.html
+++ b/gama.html
@@ -16,7 +16,6 @@
         <div id="topNav" class="col collapse navbar-collapse">
             <a class="nav-link" href="#about">Leonardo Gama</a>
         </div>
-        <hr>
         <div id="bottomNav" class="col collapse navbar-collapse">
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#codeProjects">Code Projects</a>
@@ -25,12 +24,18 @@
         </div>
     </nav>
     <!-- END NAV -->
-    <div id="mainPage" class="container-fluid">
+    <div id="page-container">
         <!-- ABOUT ME -->
-        <section id="about" class="row">
+        <div class="about-img parallax">
+            <div class="overlap-text">
+                <span class="border">
+                    <h1>Leonardo Gama</h1>
+                </span>
+                <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
+            </div>
+        </div>
+        <section id="about" class="section">
             <div class="span6" style="float: none; margin: 0 auto;">
-                <h1>Leonardo Gama</h1>
-                <p style="text-align: center; font-size: 12px;"><i>Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</i></p>
                 <br>
                 <div>
                     <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
@@ -41,11 +46,17 @@
             </div>
         </section>
         <!-- END ABOUT ME -->
-        <hr>
+
         <!-- CODE PROJECTS -->
-        <section id="codeProjects" class="row">
+        <div class="code-projects-img parallax">
+            <div class="overlap-text">
+                <span class="border">
+                    <h2>Code Projects</h2>
+                </span>
+            </div>
+        </div>
+        <section id="codeProjects" class="section">
             <div class="span6" style="float: none; margin: 0 auto;">
-                <h2>Code Projects</h2>
                 <div>
                     <ul>
                         <li>
@@ -67,14 +78,18 @@
             </div>
         </section>
         <!-- END CODE PROJECTS -->
-        <hr>
+
         <!-- COMMISSIONS -->
-        <section id="commissions" class="row">
-            <div class="span6" style="float: none; margin: 0 auto;">
-                <div id="commissionsHeader">
+        <div class="commissions-img parallax">
+            <div class="overlap-text">
+                <span class="border">
                     <h2>Pyrography Commissions</h2>
-                    <p><i>Currently <b>OPEN</b></i></p>
-                </div>
+                </span>
+                <p class="subtitle">Currently <b>OPEN</b></p>
+            </div>
+        </div>
+        <section id="commissions" class="section">
+            <div class="span6" style="float: none; margin: 0 auto;">
                 <div>
                     <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
                     <ul>
@@ -110,11 +125,17 @@
             </div>
         </section>
         <!-- END COMMISSIONS -->
-        <hr>
+
         <!-- WOOD PROJECTS -->
-        <section id="woodProjects" class="row">
+        <div class="wood-projects-img parallax">
+            <div class="overlap-text">
+                <span class="border">
+                    <h2>Wood Projects</h2>
+                </span>
+            </div>
+        </div>
+        <section id="woodProjects" class="section">
             <div class="span6" style="float: none; margin: 0 auto;">
-                <h2>Wood Projects</h2>
                 <div>
                     <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
                     <!-- TODO: Implement gallery of woodburn photos -->
