--- a/gama.html
+++ b/gama.html
@@ -26,39 +26,33 @@
     <!-- END NAV -->
     <div id="page-container">
         <!-- ABOUT ME -->
-        <div class="about-img parallax">
-            <div class="overlap-text">
-                <span class="border">
-                    <h1>Leonardo Gama</h1>
-                </span>
-                <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
+        <div id="about" class="section-container">
+            <div class="image-container">
+                <img src="./Resources/Images/img1.png" id="about-img" class="parallax" data-speed="0.2">
             </div>
-        </div>
-        <section id="about" class="section">
-            <div class="span6" style="float: none; margin: 0 auto;">
-                <br>
-                <div>
+            <div class="border overlap-text">
+                <h1>Leonardo Gama</h1>
+                <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
+                <section class="section">
+                    <br>
                     <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
                     <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
                     <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
                     <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
-                </div>
-            </div>
-        </section>
-        <!-- END ABOUT ME -->
-
-        <!-- CODE PROJECTS -->
-        <div class="code-projects-img parallax">
-            <div class="overlap-text">
-                <span class="border">
-                    <h2>Code Projects</h2>
-                </span>
+                </section>
             </div>
         </div>
-        <section id="codeProjects" class="section">
-            <div class="span6" style="float: none; margin: 0 auto;">
-                <div>
-                    <ul>
+        <!-- END ABOUT ME -->
+        <div class="section-breaker"></div>
+        <!-- CODE PROJECTS -->
+        <div id="codeProjects" class="section-container">
+            <div class="image-container">
+                <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" data-speed="0.2">
+            </div>
+            <div class="border overlap-text">
+                <h2>Code Projects</h2>
+                <section class="section">
+                    <ul>   
                         <li>
                             <h3>L30-Series Discord Bots</h3>
                             <p>
@@ -74,23 +68,20 @@
                             </p>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </section>
-        <!-- END CODE PROJECTS -->
-
-        <!-- COMMISSIONS -->
-        <div class="commissions-img parallax">
-            <div class="overlap-text">
-                <span class="border">
-                    <h2>Pyrography Commissions</h2>
-                </span>
-                <p class="subtitle">Currently <b>OPEN</b></p>
+                </section>
             </div>
         </div>
-        <section id="commissions" class="section">
-            <div class="span6" style="float: none; margin: 0 auto;">
-                <div>
+        <!-- END CODE PROJECTS -->
+        <div class="section-breaker"></div>
+        <!-- COMMISSIONS -->
+        <div id="commissions" class="section-container">
+            <div class="image-container">
+                <img src="./Resources/Images/img4.png" id="code-projects-img" class="parallax" data-speed="0.2">
+            </div>
+            <div class="border overlap-text">
+                <h2>Pyrography Commissions</h2>
+                <p class="subtitle">Currently <b>OPEN</b></p>
+                <section class="section">
                     <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
                     <ul>
                         <li><p>
@@ -117,31 +108,29 @@
                             I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory.
                         </p></li>
                     </ul>
-                    <p>To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
+                    <p>
+                        To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
                         From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks latest to be
                         completed, burned, and sealed. 
                     </p>
-                </div>
-            </div>
-        </section>
-        <!-- END COMMISSIONS -->
-
-        <!-- WOOD PROJECTS -->
-        <div class="wood-projects-img parallax">
-            <div class="overlap-text">
-                <span class="border">
-                    <h2>Wood Projects</h2>
-                </span>
+                </section>
             </div>
         </div>
-        <section id="woodProjects" class="section">
-            <div class="span6" style="float: none; margin: 0 auto;">
-                <div>
-                    <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
-                    <!-- TODO: Implement gallery of woodburn photos -->
-                </div>
+        <!-- END COMMISSIONS -->
+        <div class="section-breaker"></div>
+        <!-- WOOD PROJECTS -->
+        <div id="woodProjects" class="section-container">
+            <div class="image-container">
+                <img src="./Resources/Images/img3.png" id="wood-projects-img" class="parallax" data-speed="0.2">
             </div>
-        </section>
+            <div class="border overlap-text">
+                <h2>Wood Projects</h2>
+                <section class="section">
+                    <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
+                </section>
+                <!-- TODO: Implement gallery of woodburn photos -->
+            </div>
+        </div>
         <!-- END WOOD PROJECTS -->
     </div>
 </body>
