Made everything separate pages (to fix the parallax that wasn't working :/ ) and also tweaked some css and styling stuff (like replacing img3.png because it was down-right terrifying me)

--- a/gama.html
+++ b/gama.html
@@ -14,13 +14,13 @@
     <!-- NAV BAR -->
     <nav id="navBar" class="navbar navbar-expand-lg navbar-light sticky-top row">
         <div id="topNav" class="col collapse navbar-collapse">
-            <a class="nav-link" href="#about">Leonardo Gama</a>
+            <a class="nav-link" href="gama.html">Leonardo Gama</a>
         </div>
         <div id="bottomNav" class="col collapse navbar-collapse">
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#codeProjects">Code Projects</a>
-            <a class="nav-link" href="#commissions">Wood Commissions</a>
-            <a class="nav-link" href="#woodProjects">Wood Projects</a>
+            <a class="nav-link" href="gama.html#about">About</a>
+            <a class="nav-link" href="gama.html#codeProjects">Code Projects</a>
+            <a class="nav-link" href="commissions.html#commissions">Wood Commissions</a>
+            <a class="nav-link" href="gallery.html#woodProjects">Wood Projects</a>
         </div>
     </nav>
     <!-- END NAV -->
@@ -45,7 +45,7 @@
         <!-- CODE PROJECTS -->
         <div id="codeProjects" class="section-container">
             <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text">
+            <div class="border overlap-text-left">
                 <h2>Code Projects</h2>
                 <section class="section">
                     <ul>   
@@ -68,62 +68,6 @@
             </div>
         </div>
         <!-- END CODE PROJECTS -->
-        <div class="section-breaker"></div>
-        <!-- COMMISSIONS -->
-        <div id="commissions" class="section-container">
-            <img src="./Resources/Images/img4.png" id="code-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text">
-                <h2>Pyrography Commissions</h2>
-                <p class="subtitle">Currently <b>OPEN</b></p>
-                <section class="section">
-                    <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
-                    <ul>
-                        <li><p>
-                            I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
-                        </p></li>
-                        <li><p>
-                            On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
-                        </p></li>
-                        <li><p>
-                            I will request a downpayment (typically 25% of the cost) before I begin your commission.
-                        </p></li>
-                        <li><p>
-                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) are subject to additional fees. This may include
-                            the request of a design being burnt into a tree slice.
-                        </p></li>
-                        <li><p>
-                            When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
-                            nearby enough to me, I may also hand-deliver you the commission to reduce delivery time, though this would be at your own discretion.
-                        </p></li>
-                        <li><p>
-                            Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
-                        </p></li>
-                        <li><p>
-                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory.
-                        </p></li>
-                    </ul>
-                    <p>
-                        To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
-                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks latest to be
-                        completed, burned, and sealed. 
-                    </p>
-                </section>
-            </div>
-        </div>
-        <!-- END COMMISSIONS -->
-        <div class="section-breaker"></div>
-        <!-- WOOD PROJECTS -->
-        <div id="woodProjects" class="section-container">
-            <img src="./Resources/Images/img3.png" id="wood-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text">
-                <h2>Wood Projects</h2>
-                <section class="section">
-                    <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
-                </section>
-                <!-- TODO: Implement gallery of woodburn photos -->
-            </div>
-        </div>
-        <!-- END WOOD PROJECTS -->
     </div>
 </body>
 </html>
