Tweaked a few css things but more importantly, got the png of me!

--- a/commissions.html
+++ b/commissions.html
@@ -26,9 +26,9 @@
     <!-- END NAV -->
     <div id="page-container">
         <!-- COMMISSIONS -->
-        <div id="commissions" class="section-container">
+        <div id="commissions" class="container section-container row">
             <img src="./Resources/Images/img4.png" id="code-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text-left">
+            <div class="border overlap-text-left col">
                 <h2>Pyrography Commissions</h2>
                 <p class="subtitle">Currently <b>OPEN</b></p>
                 <section class="section">
@@ -38,13 +38,13 @@
                             I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
                         </p></li>
                         <li><p>
-                            On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
+                            On top of the flat rate, I charge an additional $7 per half hour spent burning (rounded generously). This simply means more intricate and detailed designs will cost more than simpler ones.
                         </p></li>
                         <li><p>
                             I will request a downpayment (typically 25% of the cost) before I begin your commission.
                         </p></li>
                         <li><p>
-                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) are subject to additional fees. This may include
+                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) may be subject to additional fees. This may include
                             the request of a design being burnt into a tree slice.
                         </p></li>
                         <li><p>
@@ -55,12 +55,12 @@
                             Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
                         </p></li>
                         <li><p>
-                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory.
+                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory in nature.
                         </p></li>
                     </ul>
                     <p>
                         To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
-                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks latest to be
+                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks at the latest to be
                         completed, burned, and sealed. 
                     </p>
                 </section>
