--- a/gallery.html
+++ b/gallery.html
@@ -26,9 +26,9 @@
     <!-- END NAV -->
     <div id="page-container">
         <!-- WOOD PROJECTS -->
-        <div id="woodProjects" class="section-container">
+        <div id="woodProjects" class="container section-container row">
             <img src="./Resources/Images/img3.png" id="wood-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text">
+            <div class="border overlap-text col">
                 <h2>Wood Projects</h2>
                 <section class="section">
                     <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
