--- a/gama.html
+++ b/gama.html
@@ -26,26 +26,31 @@
     <!-- END NAV -->
     <div id="page-container">
         <!-- ABOUT ME -->
-        <div id="about" class="section-container">
+        <div id="about" class="container section-container row">
             <img src="./Resources/Images/img1.png" id="about-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text">
-                <h1>Leonardo Gama</h1>
-                <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
-                <section class="section">
-                    <br>
-                    <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
-                    <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
-                    <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
-                    <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
-                </section>
+            <div class="col-8">
+                <div class="border overlap-text-left col-8 align-self-center">
+                    <h1>Leonardo Gama</h1>
+                    <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
+                    <section class="section">
+                        <br>
+                        <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
+                        <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
+                        <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
+                        <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
+                    </section>
+                </div>
+            </div>
+            <div class="col-4">
+                <img src="./Resources/Images/swag.png" id="me-img" class="col align-self-end">
             </div>
         </div>
         <!-- END ABOUT ME -->
         <div class="section-breaker"></div>
         <!-- CODE PROJECTS -->
-        <div id="codeProjects" class="section-container">
-            <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text-left">
+        <div id="codeProjects" class="container section-container row">
+            <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" style="z-index: -5;" data-speed="0.2">
+            <div class="border overlap-text-right col">
                 <h2>Code Projects</h2>
                 <section class="section">
                     <ul>   
