More work on the main page, specigically adding another *actual* image and fixing the first set of images so it overlaps (horizontally) with the flavour text

--- a/gama.html
+++ b/gama.html
@@ -29,7 +29,7 @@
         <div id="about" class="container section-container row">
             <img src="./Resources/Images/img1.png" id="about-img" class="parallax" data-speed="0.2">
             <div class="col-8">
-                <div class="border overlap-text-left col-8 align-self-center">
+                <div class="border overlap-text-left col-6 align-self-center">
                     <h1>Leonardo Gama</h1>
                     <p class="subtitle">Like the <a href="https://en.wikipedia.org/wiki/Vasco_da_Gama" target="blank">explorer</a>, not the <a href="https://en.wikipedia.org/wiki/Gamma" target="blank">letter</a>!</p>
                     <section class="section">
@@ -49,7 +49,8 @@
         <div class="section-breaker"></div>
         <!-- CODE PROJECTS -->
         <div id="codeProjects" class="container section-container row">
-            <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" style="z-index: -5;" data-speed="0.2">
+            <img src="./Resources/Images/clouds.png" class="parallax" data-speed="0.1">
+            <img src="./Resources/Images/img2.png" id="code-projects-img" class="bg-image">
             <div class="border overlap-text-right col">
                 <h2>Code Projects</h2>
                 <section class="section">
