i really thought i had some changes in there but NOPE somehow they didnt save so i have to make this commit >:(

--- a/gama.html
+++ b/gama.html
@@ -49,7 +49,7 @@
         <div class="section-breaker"></div>
         <!-- CODE PROJECTS -->
         <div id="codeProjects" class="container section-container row">
-            <img src="./Resources/Images/clouds.png" class="parallax" data-speed="0.1">
+            <img src="./Resources/Images/clouds.png" id="clouds" class="parallax" data-speed="0.1">
             <img src="./Resources/Images/img2.png" id="code-projects-img" class="bg-image">
             <div class="border overlap-text-right col">
                 <h2>Code Projects</h2>
