Finally finished with the background images and WE ACTUALLY GOT THE PARALLAX ON THE FRONT PAGE FUNCTIONING PROPERLY LETS GOOOOOOOO

--- a/commissions.html
+++ b/commissions.html
@@ -27,13 +27,15 @@
     <div id="page-container">
         <!-- COMMISSIONS -->
         <div id="commissions" class="container section-container row">
-            <img src="./Resources/Images/img4.png" id="code-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text-left col">
+            <div class="shaded-image-container">
+                <img src="./Resources/Images/img4.png" id="commissions-img" class="parallax" data-speed="0.2">
+            </div>
+            <div class="border overlap-text-right col">
                 <h2>Pyrography Commissions</h2>
                 <p class="subtitle">Currently <b>OPEN</b></p>
                 <section class="section">
                     <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
-                    <ul>
+                    <ul class="scrollable-section">
                         <li><p>
                             I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
                         </p></li>
@@ -49,7 +51,7 @@
                         </p></li>
                         <li><p>
                             When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
-                            nearby enough to me, I may also hand-deliver you the commission to reduce delivery time, though this would be at your own discretion.
+                            nearby enough to me, I may also offer pickup/delivery to reduce delivery time, though this would be at your own discretion.
                         </p></li>
                         <li><p>
                             Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
