--- a/gama.html
+++ b/gama.html
@@ -49,12 +49,12 @@
         <div class="section-breaker"></div>
         <!-- CODE PROJECTS -->
         <div id="codeProjects" class="container section-container row">
-            <img src="./Resources/Images/clouds.png" id="clouds" class="parallax" data-speed="0.1">
-            <img src="./Resources/Images/img2.png" id="code-projects-img" class="bg-image">
+            <img src="./Resources/Images/clouds.png" id="clouds" class="bg-image" data-speed="0">
+            <img src="./Resources/Images/img2.png" id="code-projects-img" class="parallax" data-speed="-0.15">
             <div class="border overlap-text-right col">
                 <h2>Code Projects</h2>
                 <section class="section">
-                    <ul>   
+                    <ul class="dotless">   
                         <li>
                             <h3>L30-Series Discord Bots</h3>
                             <p>
