Finally implemented the gallery page!

--- a/commissions.html
+++ b/commissions.html
@@ -40,7 +40,7 @@
                             I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
                         </p></li>
                         <li><p>
-                            On top of the flat rate, I charge an additional $7 per half hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
+                            On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
                         </p></li>
                         <li><p>
                             I will request a downpayment (typically 25% of the cost) before I begin your commission.
