--- a/gallery.html
+++ b/gallery.html
@@ -27,14 +27,32 @@
     <div id="page-container">
         <!-- WOOD PROJECTS -->
         <div id="woodProjects" class="container section-container row">
-            <img src="./Resources/Images/img3.png" id="wood-projects-img" class="parallax" data-speed="0.2">
-            <div class="border overlap-text col">
+            <img src="./Resources/Images/img3.png" id="wood-projects-img" class="parallax" data-speed="0.5">
+            <div class="border overlap-text-left col">
                 <h2>Wood Projects</h2>
                 <section class="section">
-                    <p>Below is a small gallery of some of my best/favourite pyrography pieces I've done. Feel free to browse at your own leisure!</p>
+                    <p>Below is a small gallery of some of my best/favourite pyrography pieces. Feel free to browse at your own leisure!</p>
                 </section>
-                <!-- TODO: Implement gallery of woodburn photos -->
             </div>
+            <div class="gallery-container">
+                <img src="./Resources/Images/Wood/wood00.png" alt="Shovel Knight" id="wood00" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood01.png" alt="Plague Knight" id="wood01" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood02.png" alt="Metroid" id="wood02" class="gallery-img" data-speed="0.2" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood03.png" alt="Samus Aran" id="wood03" class="gallery-img" data-speed="-0.1" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood04.png" alt="&quot;Sorichetti&quot; House Sign" id="wood04" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood05.png" alt="Dracula&apos;s Castle" id="wood05" class="gallery-img" data-speed="-0.05" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood06.png" alt="The Champions&apos; Ballad" id="wood06" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood07.png" alt="Master Cycle Zero" id="wood07" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood08.png" alt="Bayonetta Gets Wicked!" id="wood08" class="gallery-img" data-speed="0.33" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood09.png" alt="Bulbasaur" id="wood09" class="gallery-img" data-speed="0.15" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood10.png" alt="Super Smash Bros. Ultimate" id="wood10" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood11.png" alt="Gate of Time" id="wood11" class="gallery-img" data-speed="0.08" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="gallery-img" data-speed="0.28" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="gallery-img" data-speed="-0.25" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood14.png" alt="Cowboy Life Advice" id="wood14" class="gallery-img" data-speed="0.15" onload="setGalleryParallax(this)">
+                <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="gallery-img" data-speed="0" onload="setGalleryParallax(this)">
+            </div>
+            <!-- END GALLERY -->
         </div>
         <!-- END WOOD PROJECTS -->
     </div>
