Added captions below images in the gallery with their titles (and did some resizing/cropping)

--- a/gallery.html
+++ b/gallery.html
@@ -35,22 +35,72 @@
                 </section>
             </div>
             <div class="gallery-container">
-                <img src="./Resources/Images/Wood/wood00.png" alt="Shovel Knight" id="wood00" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood01.png" alt="Plague Knight" id="wood01" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)"><br>
-                <img src="./Resources/Images/Wood/wood02.png" alt="Metroid" id="wood02" class="gallery-img" data-speed="0.2" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood03.png" alt="Samus Aran" id="wood03" class="gallery-img" data-speed="-0.1" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood04.png" alt="&quot;Sorichetti&quot; House Sign" id="wood04" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood05.png" alt="Dracula&apos;s Castle" id="wood05" class="gallery-img" data-speed="-0.05" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood06.png" alt="The Champions&apos; Ballad" id="wood06" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood07.png" alt="Master Cycle Zero" id="wood07" class="gallery-img" data-speed="0.1" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood08.png" alt="Bayonetta Gets Wicked!" id="wood08" class="gallery-img" data-speed="0.33" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood09.png" alt="Bulbasaur" id="wood09" class="gallery-img" data-speed="0.15" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood10.png" alt="Super Smash Bros. Ultimate" id="wood10" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood11.png" alt="Gate of Time" id="wood11" class="gallery-img" data-speed="0.08" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="gallery-img" data-speed="0.26" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="gallery-img" data-speed="0.3" onload="setGalleryParallax(this)">
-                <img src="./Resources/Images/Wood/wood14.png" alt="Cowboy Life Advice" id="wood14" class="gallery-img" data-speed="0.04" onload="setGalleryParallax(this)"><br>
-                <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="gallery-img" data-speed="0.14" onload="setGalleryParallax(this)">
+                <div class="gallery-img" data-speed="0.1">
+                    <img src="./Resources/Images/Wood/wood00.png" alt="Shovel Knight" id="wood00" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Shovel Knight</p>
+                </div>
+                <div class="gallery-img" data-speed="0.3">
+                    <img src="./Resources/Images/Wood/wood01.png" alt="Plague Knight" id="wood01" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Plague Knight</p>
+                </div>
+                <br>
+                <div class="gallery-img" data-speed="0.2">
+                    <img src="./Resources/Images/Wood/wood02.png" alt="Metroid" id="wood02" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Metroid</p>
+                </div>
+                <div class="gallery-img" data-speed="-0.1">
+                    <img src="./Resources/Images/Wood/wood03.png" alt="Samus Aran" id="wood03" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Samus Aran</p>
+                </div>
+                <div class="gallery-img" data-speed="0.1">
+                    <img src="./Resources/Images/Wood/wood04.png" alt="&quot;Sorichetti&quot; House Sign" id="wood04" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">"Sorichetti" House Sign</p>
+                </div>
+                <div class="gallery-img" data-speed="-0.05">
+                    <img src="./Resources/Images/Wood/wood05.png" alt="Dracula&apos;s Castle" id="wood05" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Dracula's Castle</p>
+                </div>
+                <div class="gallery-img" data-speed="0.3">
+                    <img src="./Resources/Images/Wood/wood06.png" alt="The Champions&apos; Ballad" id="wood06" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">The Champion's Ballad</p>
+                </div>
+                <div class="gallery-img" data-speed="0.1">
+                    <img src="./Resources/Images/Wood/wood07.png" alt="Master Cycle Zero" id="wood07" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Master Cycle Zero</p>
+                </div>
+                <div class="gallery-img" data-speed="0.33">
+                    <img src="./Resources/Images/Wood/wood08.png" alt="Bayonetta Gets Wicked!" id="wood08" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Bayonetta Gets Wicked!</p>
+                </div>
+                <div class="gallery-img" data-speed="0.15">
+                    <img src="./Resources/Images/Wood/wood09.png" alt="Bulbasaur" id="wood09" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Bulbasaur</p>
+                </div>
+                <div class="gallery-img" data-speed="0.3">
+                    <img src="./Resources/Images/Wood/wood10.png" alt="Super Smash Bros. Ultimate" id="wood10" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Super Smash Bros. Ultimate</p>
+                </div>
+                <div class="gallery-img" data-speed="0.08">
+                    <img src="./Resources/Images/Wood/wood11.png" alt="Gate of Time" id="wood11" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Gate of Time</p>
+                </div>
+                <div class="gallery-img" data-speed="0.26">
+                    <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Bowser</p>
+                </div>
+                <div class="gallery-img" data-speed="0.3">
+                    <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Wily's Castle (MM2)</p>
+                </div>
+                <div class="gallery-img" data-speed="0.04">
+                    <img src="./Resources/Images/Wood/wood14.png" alt="Cowboy Life Advice" id="wood14" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Cowboy Life Advice</p>
+                </div>
+                <br>
+                <div class="gallery-img" data-speed="0.14">
+                    <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">"Ursula" Stocking Nameplate</p>
+                </div>
             </div>
             <!-- END GALLERY -->
         </div>
